--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 EMAIL_USER=srishyam4@gmail.com
-EMAIL_PASS=xnntqykovuolqclc
+EMAIL_PASS="your_password" #For security reasons after uploading the file in github and recorded the video i have removed my password.
